syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message NormalAskSetting {
  string id = 1;
  string price_ujpy = 2;
  string amount_uupx = 3;
}
